Fix menu text align

--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -14,6 +14,7 @@
   font-weight: var(--sl-font-weight-normal);
   line-height: var(--sl-line-height-normal);
   letter-spacing: var(--sl-letter-spacing-normal);
+  text-align: left;
   color: var(--color-gray-40);
   padding: var(--sl-spacing-xx-small) var(--sl-spacing-x-large);
   transition: var(--sl-transition-fast) fill;
