--- a/src/styles/component.scss
+++ b/src/styles/component.scss
@@ -1,7 +1,6 @@
 :host {
   position: relative;
   box-sizing: border-box;
-  text-align: left;
 
   & *,
   & *:before,
